Fixed center from bleeding over.

--- a/branches/RP_1073/css/main.css
+++ b/branches/RP_1073/css/main.css
@@ -153,7 +153,7 @@ BODY {
 }
 
 .content .col-center {
-	padding: 0 1% 50px 1%;
+	padding: 0 8px 50px 8px;
 	width: 53%;
 	border-left: 2px solid #C6DDEF;
 	height: 1%;
